--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,33 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
-	<TextView
-        android:id="@+id/tv_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/et_email"
-        android:layout_alignLeft="@+id/et_email"
-        android:text="@string/tv_email"/>
-
-    <TextView
-        android:id="@+id/tv_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/et_password"
-        android:layout_above="@+id/et_password"
-        android:text="@string/tv_password" />
-
-    <ImageView
-        android:id="@+id/img_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/digirecordbox" />
+    android:layout_height="match_parent"
+    android:gravity="center" >
 
     <EditText
         android:id="@+id/et_email"
@@ -38,27 +13,54 @@
         android:ems="10"
         android:inputType="textEmailAddress" />
 
+    <TextView
+        android:id="@+id/tv_email"
+        style="@style/AppTheme.LoginTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/et_email"
+        android:layout_alignLeft="@+id/et_email"
+        android:layout_marginBottom="15dp"
+        android:text="@string/tv_email" />
+
+    <ImageView
+        android:id="@+id/img_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tv_email"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="23dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/digirecordbox" />
+
+    <TextView
+        android:id="@+id/tv_password"
+        style="@style/AppTheme.LoginTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/et_password"
+        android:layout_below="@+id/et_email"
+        android:layout_marginTop="34dp"
+        android:text="@string/tv_password" />
+
     <EditText
         android:id="@+id/et_password"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_login"
         android:layout_alignLeft="@+id/btn_login"
-        android:layout_marginBottom="40dp"
+        android:layout_below="@+id/tv_password"
+        android:layout_marginTop="17dp"
         android:ems="10"
-        android:inputType="textPassword"
-         >
-
-        <requestFocus />
-    </EditText>
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btn_login"
+        style="@style/AppTheme.LoginButton"
         android:layout_width="220dp"
         android:layout_height="30dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/et_password"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="62dp"
+        android:layout_marginTop="30dp"
         android:text="@string/btn_login" />
     
 </RelativeLayout>
