--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,4 +36,20 @@
         android:layout_toRightOf="@+id/btn_recorder_start"
         android:text="@string/btn_recorder_cancel" />
 
+    <TextView
+        android:id="@+id/Status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <ProgressBar
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/btn_recorder_start" />
+
 </RelativeLayout>
