Added status icons on recording list activity (indicates if file exists on local and/or cloud)

--- a/res/layout/rowlayout_recordinglist.xml
+++ b/res/layout/rowlayout_recordinglist.xml
@@ -31,4 +31,20 @@
         android:layout_marginRight="22dp"
         android:text="@string/ph_duration" />
 
+    <ImageView
+        android:id="@+id/iv_status_local"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tv_date"
+        android:layout_alignLeft="@+id/tv_duration"
+        android:background="@drawable/status_none" />
+
+    <ImageView
+        android:id="@+id/iv_status_cloud"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/tv_duration"
+        android:layout_alignTop="@+id/iv_status_local"
+        android:background="@drawable/status_none" />
+
 </RelativeLayout>
