--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,39 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_blue"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ro.rcsrds.recordbox.MainActivity" >
-
-    <Button
-        android:id="@+id/btn_recorder_start"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="128dp"
-        android:text="@string/btn_recorder_start" />
-
-    <Button
-        android:id="@+id/btn_recorder_stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/btn_recorder_start"
-        android:layout_marginRight="17dp"
-        android:layout_toLeftOf="@+id/btn_recorder_start"
-        android:text="@string/btn_recorder_stop" />
-
-    <Button
-        android:id="@+id/btn_recorder_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/btn_recorder_stop"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@+id/btn_recorder_start"
-        android:text="@string/btn_recorder_cancel" />
 
     <TextView
         android:id="@+id/Status"
@@ -45,11 +18,69 @@
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/Status"
+        android:layout_marginTop="59dp" >
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/btn_recorder_stop"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:background="@drawable/button_stop_small"
+                android:text="@string/btn_recorder_stop"
+                android:textSize="0sp" />
+
+            <Button
+                android:id="@+id/btn_recorder_cancel"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/button_cancel_small"
+                android:text="@string/btn_recorder_cancel"
+                android:textSize="0sp" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_recorder_start"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignBottom="@+id/linearLayout1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="109dp"
+        android:background="@drawable/button_record_big"
+        android:text="@string/btn_recorder_start"
+        android:textSize="20sp" />
+
     <ProgressBar
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/btn_recorder_start" />
+        android:layout_alignBottom="@+id/Status"
+        android:layout_marginBottom="24dp"
+        android:layout_toRightOf="@+id/linearLayout1" />
+
+    <TextView
+        android:id="@+id/tv_recoder_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_recorder_start"
+        android:layout_centerHorizontal="true"
+        android:text="@string/tv_recorder_time"
+        android:textColor="@color/digi_lightgray"
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
