--- a/res/layout/activity_recordinglist.xml
+++ b/res/layout/activity_recordinglist.xml
@@ -3,10 +3,22 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
- 
+
+    <EditText
+        android:id="@+id/searchField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/search"
+        android:inputType="textVisiblePassword">
+
+        <requestFocus />
+    </EditText>
+
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" >
+    </ListView>
  
 </LinearLayout>
