--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:layout_toRightOf="@+id/linearLayout1" />
 
     <TextView
-        android:id="@+id/tv_recoder_time"
+        android:id="@+id/tv_recorder_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btn_recorder_start"
