--- a/res/layout/activity_mediaplayer.xml
+++ b/res/layout/activity_mediaplayer.xml
@@ -12,9 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="56dp"
         android:layout_marginTop="74dp"
-        android:background="@drawable/button_play_small"
-        android:text="@string/btn_player_play"
-        android:textSize="0sp" />
+        android:background="@drawable/button_play_small" />
 
     <Button
         android:id="@+id/btn_player_stop"
@@ -24,9 +22,7 @@
         android:layout_alignBottom="@+id/btn_player_play"
         android:layout_marginLeft="46dp"
         android:layout_toRightOf="@+id/btn_player_play"
-        android:background="@drawable/button_stop_small"
-        android:text="@string/btn_player_stop"
-        android:textSize="0sp" />
+        android:background="@drawable/button_stop_small" />
 
     <SeekBar
         android:id="@+id/sk_bar_player"
