--- a/res/menu/recordinglist.xml
+++ b/res/menu/recordinglist.xml
@@ -5,6 +5,7 @@
     
     <item android:id="@+id/option_menu_recorder" android:title="@string/option_menu_recorder" />
     <item android:id="@+id/option_menu_import_local" android:title="@string/option_menu_import_local" />
+    <item android:id="@+id/option_menu_check_files" android:title="@string/option_menu_check_files" />
     <item android:id="@+id/option_menu_about" android:title="@string/option_menu_about" />    
 
 </menu>
