--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,7 +7,7 @@
     <item android:id="@+id/option_menu_list" android:title="@string/option_menu_list" />
     <item android:id="@+id/option_menu_about" android:title="@string/option_menu_about" />
     <item android:id="@+id/option_menu_logout" android:title="@string/option_menu_logout" />
-    <item android:id="@+id/debug_crash" android:title="Crash" />
+    <!--<item android:id="@+id/debug_crash" android:title="Crash" />-->
 
 
 </menu>
