--- a/res/layout/activity_mediaplayer.xml
+++ b/res/layout/activity_mediaplayer.xml
@@ -75,11 +75,15 @@
 
     <TextView
         android:id="@+id/tv_description_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tv_description_tag"
         android:layout_alignBottom="@+id/tv_description_tag"
-        android:layout_centerHorizontal="true"
+        android:layout_alignLeft="@+id/tv_name_content"
+        android:layout_marginRight="10dp"
+        android:gravity="top|left"
+        android:maxLines="10"
+        android:scrollbars="vertical"
         android:text="@string/ph_description"
         android:textColor="@color/digi_lightgray" />
 
