--- a/res/menu/about.xml
+++ b/res/menu/about.xml
@@ -5,5 +5,6 @@
 
    	<item android:id="@+id/option_menu_recorder" android:title="@string/option_menu_recorder" />
     <item android:id="@+id/option_menu_list" android:title="@string/option_menu_list" />
+    <item android:id="@+id/option_menu_settings" android:title="@string/option_menu_settings" />
 
 </menu>
