--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,9 +5,8 @@
     xmlns:recordbox="http://schemas.android.com/apk/res-auto" >
    
     <item android:id="@+id/option_menu_list" android:title="@string/option_menu_list" />
+    <item android:id="@+id/option_menu_settings" android:title="@string/option_menu_settings" />
     <item android:id="@+id/option_menu_about" android:title="@string/option_menu_about" />
     <item android:id="@+id/option_menu_logout" android:title="@string/option_menu_logout" />
-    <!--<item android:id="@+id/debug_crash" android:title="Crash" />-->
-
-
+    
 </menu>
