--- a/res/menu/mediaplayer.xml
+++ b/res/menu/mediaplayer.xml
@@ -5,6 +5,7 @@
     
     <item android:id="@+id/option_menu_recorder" android:title="@string/option_menu_recorder" />
     <item android:id="@+id/option_menu_list" android:title="@string/option_menu_list" />
+    <item android:id="@+id/option_menu_settings" android:title="@string/option_menu_settings" />
     <item android:id="@+id/option_menu_about" android:title="@string/option_menu_about" />
 
 </menu>
