--- a/res/layout/activity_mediaplayer.xml
+++ b/res/layout/activity_mediaplayer.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_blue" >
+    android:layout_height="match_parent" >
 
     <Button
         android:id="@+id/btn_player_play"
@@ -40,8 +39,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/sk_bar_player"
         android:text="@string/tv_recorder_time"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/digi_lightgray" />
+        android:textAppearance="?android:attr/textAppearanceSmall" /> 
 
     <TextView
         android:id="@+id/totalTime"
@@ -50,8 +48,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/sk_bar_player"
         android:text="@string/tv_recorder_time"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/digi_lightgray" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/tv_name_tag"
@@ -61,8 +58,7 @@
         android:layout_below="@+id/sk_bar_player"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="35dp"
-        android:text="@string/tv_name"
-        android:textColor="@color/digi_lightgray" />
+        android:text="@string/tv_name" />
 
     <TextView
         android:id="@+id/tv_name_content"
@@ -70,8 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/tv_description_tag"
         android:layout_toRightOf="@+id/btn_player_play"
-        android:text="@string/ph_name"
-        android:textColor="@color/digi_lightgray" />
+        android:text="@string/ph_name" />
 
     <TextView
         android:id="@+id/tv_description_content"
@@ -84,8 +79,7 @@
         android:gravity="top|left"
         android:maxLines="10"
         android:scrollbars="vertical"
-        android:text="@string/ph_description"
-        android:textColor="@color/digi_lightgray" />
+        android:text="@string/ph_description" />
 
     <TextView
         android:id="@+id/tv_description_tag"
@@ -94,7 +88,6 @@
         android:layout_alignLeft="@+id/tv_name_tag"
         android:layout_below="@+id/tv_name_tag"
         android:layout_marginTop="34dp"
-        android:text="@string/tv_description"
-        android:textColor="@color/digi_lightgray" />
+        android:text="@string/tv_description" />
 
 </RelativeLayout>
