--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,22 +4,25 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Light"> 
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+            backward-compatibility can go here. -->
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->      
+        <!-- All customizations that are NOT specific to a particular API-level can go here. --> 
+        <item name="android:windowBackground">@drawable/background_blue</item>  
+        <item name="android:textColor">@color/white</item>   
+        <item name="android:windowNoTitle">true</item>
     </style>
     
+    <!--
     <style name="AppTheme.Login">        
-        <item name="android:windowBackground">@color/light</item>
-        <item name="android:windowNoTitle">true</item>        
+         <item name="android:windowBackground">@color/light</item> 
+        <item name="android:windowNoTitle">true</item>         
     </style>
     
      <style name="AppTheme.LoginButton">        
@@ -29,7 +32,7 @@
     
     <style name="AppTheme.LoginTextView">
         <item name="android:textColor">@color/gray</item>
-        <item name="android:textSize">12sp</item>
-    </style>
+        <item name="android:textSize">12sp</item> 
+    </style>-->
 
 </resources>
