--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -12,13 +12,13 @@
     <!-- Edit text style holo -->
     <style name="DigiEditTextHolo" parent="@android:style/Widget.EditText">
         <item name="android:background">@drawable/edit_text_holo_light_white</item>
-        <item name="android:textCursorDrawable">@null</item> <!-- makes cursor use text color instead -->
+        <item name="android:textCursorDrawable">@drawable/edit_text_cursor</item>
     </style>
     
     <!-- Edit text style -->
     <style name="DigiEditText" parent="@android:style/Widget.EditText">
         <item name="android:background">@drawable/bg_edit_text</item>
-       	<item name="android:textCursorDrawable">@null</item> <!-- makes cursor use text color instead -->
+       	<item name="android:textCursorDrawable">@drawable/edit_text_cursor</item>
     </style>
 
 </resources>
