--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -25,7 +25,8 @@
         
          <!-- Widget styles  --> 
         <item name="android:editTextStyle">@style/DigiEditText</item>
-        <item name="android:listViewStyle">@style/DigiListView</item>      
+        <item name="android:listViewStyle">@style/DigiListView</item>
+        <item name="android:seekBarStyle">@style/DigiSeekBar</item>
         
         <!-- Window attributes -->
         <item name="android:windowBackground">@drawable/bg</item>           
@@ -62,9 +63,17 @@
     
     <!-- List view style -->
     <style name="DigiListView" parent="@android:style/Widget.ListView">
-         <item name="android:listSelector">@android:color/transparent</item>
-         <!-- background color for each row is set in rowlayout_recordinglist.xml -->
+	    <item name="android:listSelector">@android:color/transparent</item>
+	    <!-- background color for each row is set in rowlayout_recordinglist.xml -->      
     </style>
+    
+    <!-- Seek bar style -->
+    <style name="DigiSeekBar" parent="@android:style/Widget.SeekBar">
+		<item name="android:thumb">@drawable/seek_bar_thumb</item>
+		<item name="android:progressDrawable">@drawable/seek_bar_progress</item>
+		<item name="android:minHeight">3dip</item>
+		<item name="android:maxHeight">3dip</item>
+    </style> 
     
 
 </resources>
