--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,14 +4,11 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light"> 
+    <style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"> 
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here. -->
-            
-            <!-- Window attributes -->
-            <item name="android:windowNoTitle">true</item>
     </style>
 
     <!-- Application theme. -->
@@ -32,8 +29,8 @@
         <item name="android:seekBarStyle">@style/DigiSeekBar</item>
         
         <!-- Window attributes -->
-        <item name="android:windowBackground">@drawable/bg</item>           
-        <!--  <item name="android:windowNoTitle">true</item>-->
+        <item name="android:windowBackground">@drawable/bg</item>
+        <!-- <item name="android:windowNoTitle">true</item>-->
     </style>
     
     <!-- Login activity theme -->
