--- a/res/drawable-hdpi/status_cloud.xml
+++ b/res/drawable-hdpi/status_cloud.xml
@@ -7,6 +7,6 @@
         android:height="15dp" />    
     
     <solid
-        android:color="@color/blue" />
+        android:color="@color/status_cloud" />
     
 </shape>
