--- a/res/drawable-hdpi/status_local.xml
+++ b/res/drawable-hdpi/status_local.xml
@@ -7,6 +7,6 @@
         android:height="15dp" />    
     
     <solid
-        android:color="@color/green" />
+        android:color="@color/status_local" />
 
 </shape>
