--- a/res/drawable-hdpi/status_none.xml
+++ b/res/drawable-hdpi/status_none.xml
@@ -7,6 +7,6 @@
         android:height="15dp" />    
     
     <solid
-        android:color="@color/gray" />
+        android:color="@color/status_none" />
 
 </shape>
