--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,75 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true" >
 
-	<RelativeLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingBottom="@dimen/activity_vertical_margin"
-	    android:paddingLeft="@dimen/activity_horizontal_margin"
-	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin"
-	    android:gravity="center" >
-	
-	    <EditText
-	        android:id="@+id/et_email"
-	        android:layout_width="220dp"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/tv_password"
-	        android:layout_centerVertical="true"
-	        android:ems="10"
-	        android:inputType="textEmailAddress" />
-	
-	    <TextView
-	        android:id="@+id/tv_email"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_above="@+id/et_email"
-	        android:layout_alignLeft="@+id/et_email"
-	        android:layout_marginBottom="15dp"
-	        android:text="@string/tv_email" />
-	
-	    <ImageView
-	        android:id="@+id/img_logo"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_above="@+id/tv_email"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginBottom="23dp"
-	        android:contentDescription="@string/app_name"
-	        android:src="@drawable/digirecordbox" />
-	
-	    <TextView
-	        android:id="@+id/tv_password"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/et_password"
-	        android:layout_below="@+id/et_email"
-	        android:layout_marginTop="34dp"
-	        android:text="@string/tv_password" />
-	
-	    <EditText
-	        android:id="@+id/et_password"
-	        android:layout_width="220dp"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/btn_login"
-	        android:layout_below="@+id/tv_password"
-	        android:layout_marginTop="17dp"
-	        android:ems="10"
-	        android:inputType="textPassword" />
-	
-	    <Button
-	        android:id="@+id/btn_login"
-	        android:layout_width="220dp"
-	        android:layout_height="30dp"
-	        android:layout_below="@+id/et_password"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="30dp"
-	        android:text="@string/btn_login" />
-	    
-	</RelativeLayout>
-	
+    <LinearLayout
+        android:id="@+id/LinearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top|center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
+
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_width="180dp"
+            android:layout_height="120dp"
+            android:layout_marginBottom="23dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/digirecordbox" />
+        
+        <TextView
+            android:id="@+id/tv_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_email" />
+
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textEmailAddress" />
+
+        <TextView
+            android:id="@+id/tv_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="34dp"
+            android:text="@string/tv_password" />
+
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="125dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/btn_login" />
+    </LinearLayout>
+
 </ScrollView>
