--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="digi_purple_light">#3d396e</color>
     <color name="digi_purple_bright">#5b569b</color>
     <color name="digi_blue_light">#00a6ff</color>
+    <color name="digi_blue_dark">#0d0850</color>
     
     <color name="status_cloud">#0057ba</color>
     <color name="status_local">#48980e</color>
