Login activity: Added progress indicator on log in action; Can now log in by using contextual action instead of pressing the button;

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -48,7 +48,8 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:imeOptions="actionDone" />
 
         <Button
             android:id="@+id/btn_login"
