--- a/res/layout/activity_mediaplayer.xml
+++ b/res/layout/activity_mediaplayer.xml
@@ -1,93 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
+    
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/ph_name"
+        android:enabled="false"
+        android:inputType="text" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:layout_marginTop="50dp" >
+        
+        <TextView
+	        android:id="@+id/curentTime"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/tv_recorder_time"
+	        android:textAppearance="@style/DigiTextAppearance.Small" />
+        
+        <TextView
+	        android:id="@+id/separatorTime"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/tv_recorder_separator"
+	        android:textAppearance="@style/DigiTextAppearance.Small" />
 
-    <Button
-        android:id="@+id/btn_player_play"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="74dp"
-        android:background="@drawable/button_player_start" />
-
-    <Button
-        android:id="@+id/btn_player_stop"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_alignBaseline="@+id/btn_player_play"
-        android:layout_alignBottom="@+id/btn_player_play"
-        android:layout_marginLeft="46dp"
-        android:layout_toRightOf="@+id/btn_player_play"
-        android:background="@drawable/button_player_stop" />
-
+	    <TextView
+	        android:id="@+id/totalTime"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/tv_recorder_time"
+	        android:textAppearance="@style/DigiTextAppearance.Small" />
+	    
+    </LinearLayout>    
+        
     <SeekBar
         android:id="@+id/sk_bar_player"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_player_play"
-        android:layout_marginTop="16dp"
-        android:layout_toLeftOf="@+id/totalTime"
-        android:layout_toRightOf="@+id/curentTime" />
-
-    <TextView
-        android:id="@+id/curentTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/sk_bar_player"
-        android:text="@string/tv_recorder_time"
-        android:textAppearance="?android:attr/textAppearanceSmall" /> 
-
-    <TextView
-        android:id="@+id/totalTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/sk_bar_player"
-        android:text="@string/tv_recorder_time"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/tv_name_tag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/sk_bar_player"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="35dp"
-        android:text="@string/tv_name" />
-
-    <TextView
-        android:id="@+id/tv_name_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tv_description_tag"
-        android:layout_toRightOf="@+id/btn_player_play"
-        android:text="@string/ph_name" />
-
-    <TextView
-        android:id="@+id/tv_description_content"
+        android:layout_height="wrap_content" />
+    
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/tv_description_tag"
-        android:layout_alignBottom="@+id/tv_description_tag"
-        android:layout_alignLeft="@+id/tv_name_content"
-        android:layout_marginRight="10dp"
-        android:gravity="top|left"
-        android:maxLines="10"
-        android:scrollbars="vertical"
-        android:text="@string/ph_description" />
-
+        android:gravity="end"
+        android:layout_marginTop="30dp"  >
+	    
+        <Button
+	        android:id="@+id/btn_player_play"
+	        android:layout_width="60dp"
+	        android:layout_height="60dp"
+	        android:background="@drawable/button_player_start" />
+	
+	    <Button
+	        android:id="@+id/btn_player_stop"
+	        android:layout_width="60dp"
+	        android:layout_height="60dp"
+	        android:layout_marginLeft="20dp"
+	        android:layout_marginStart="20dp"
+	        android:background="@drawable/button_player_stop" /> 
+	    
+    </LinearLayout>
+        
     <TextView
-        android:id="@+id/tv_description_tag"
+        android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_name_tag"
-        android:layout_below="@+id/tv_name_tag"
         android:layout_marginTop="34dp"
-        android:text="@string/tv_description" />
+        android:text="@string/tv_description"
+        android:textAppearance="@style/DigiTextAppearance.Medium" />
 
-</RelativeLayout>
+    <EditText
+        android:id="@+id/et_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:inputType="textMultiLine"
+        android:maxLines="10"
+        android:minLines="3"
+        android:scrollbars="vertical"
+        android:text="@string/ph_description"
+        android:gravity="top" />
+
+</LinearLayout>
